fix layout bugs

--- a/games/static/css/index_layout.css
+++ b/games/static/css/index_layout.css
@@ -17,7 +17,7 @@ body{
     color: #b9c0d5;
 }
 .row h3{
-    font-size: 2vw;
+    font-size: 28px;
     font-family: Futura;
     margin: 1vw;
     /*color: #77abb7;*/
